# dotfiles

./: .agent-config.example.yml  .bash_aliases  .bash_aliases.amazonq  .bash_aliases.claude  .bash_aliases.clipboard  .bash_aliases.github  .bash_aliases.llama  .bash_aliases.mcp  .bash_aliases.misc  .bash_aliases.python  .bash_aliases.q-cli  .bash_aliases.signing  .bash_exports  .bash_exports.bedrock.template  .bash_exports.claude.template  .bash_exports.local.example  .bash_profile  .bash_secrets.example  .bashrc  .env.example  .gitattributes  .gitconfig  .gitconfig-backup  .gitconfig.signing  .gitconfig.work  .gitignore  .inputrc  .mcp.json  .profile  .tmux.conf  .zprofile  .zsh_prompt  .zshrc  AI-RULES.md  AmazonQ.md  BELL_TESTING.md  CHANGELOG.md  CLAUDE.md  MANUAL_WORKFLOW_CHANGES.md  PR.md  (+41 more)
.amazonq/: global_context.json
.bash_aliases.d/: ai-providers.sh  amazonq.sh  claude-bedrock-protection.sh  claude-mcp.sh  claude.sh  clipboard.sh  clojure-mcp.sh  codex.sh  gcloud.sh  git.sh  github.sh  llama.sh  macos.sh  misc.sh  nav.sh  python.sh  q-cli.sh  tmux.sh  work-machine-detection.sh
.claude/: README.md  permissions-documentation.md  settings.json  settings.local.json
.claude-plugin/: marketplace.json  plugin.json  procedures
.clojure-mcp/: config.edn
.codex/: config.toml
.config/: provider_dirs.conf.example
mcp/servers/git-mcp-server/: README-FLAG.md  README-SPLIT.md  README.md  git_mcp_server.py  mcp-server-git-read.py  mcp-server-git-write.py  pyproject.toml
mcp/servers/git-mcp-server/src/atxtechbro_git_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
mcp/servers/git-mcp-server/src/mcp_server_git/: __init__.py  base.py  logging_utils.py  server.py  server_read.py  server_write.py
(+641 files in other folders)
