[project]
name = "atxtechbro-git-mcp-server"
version = "0.1.0"
description = "Personalized Git workflow MCP server integrated into dotfiles for faster iteration and command chaining experiments"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "atxtechbro", email = "morganj2k@gmail.com" }]
maintainers = [{ name = "atxtechbro", email = "morganj2k@gmail.com" }]
keywords = ["git", "mcp", "dotfiles", "workflow", "experimental"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "click>=8.1.7",
    "gitpython>=3.1.43",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
atxtechbro-git-mcp-server = "mcp_server_git:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "ruff>=0.7.3", "pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_git"]
