[project]
name = "atxtechbro-git-mcp-server"
version = "0.1.0"
description = "Experimental Git MCP server for dotfiles integration"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "gitpython>=3.1.43",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
atxtechbro-git-mcp-server = "mcp_server_git:main"
